fixed overlapping css color issues

--- a/sass/components/_Blockquote.sass
+++ b/sass/components/_Blockquote.sass
@@ -8,16 +8,16 @@
   margin-bottom: rhythm(2)
 
   +bp(s)
-    margin-left: rhythm(-2)
-    margin-right: rhythm(-2)
+    margin-left: rhythm(-1)
+    margin-right: rhythm(-1)
 
   +bp(l)
-    margin-left: rhythm(-4)
-    margin-right: rhythm(-4)
+    margin-left: rhythm(-3)
+    margin-right: rhythm(-3)
 
   +bp(xxl)
-    margin-left: rhythm(-6)
-    margin-right: rhythm(-6)
+    margin-left: rhythm(-5)
+    margin-right: rhythm(-5)
 
   &-content
     @include font-size('h2')
