--- a/sass/components/_CopyContainer.sass
+++ b/sass/components/_CopyContainer.sass
@@ -22,3 +22,6 @@
     &-image
       img
         display: block
+
+  p
+    color: theme-color(darkGray)
